<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeating_texture"
    tools:context=".fragments.AboutFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/string_about_title"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_nebula_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView_SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic"
            android:textColor="@color/color_nebula_dark"
            android:text="@string/string_about_subtitle"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/TextView_Credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_about_programmer"
            android:textColor="@color/color_nebula_dark"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/TextView_Author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/string_about_author"
            android:textColor="@color/color_nebula_dark"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/TextView_Dependencies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/string_about_dependencies"
            android:textColor="@color/color_nebula_dark"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/string_about_theme_license"
            android:id="@+id/TextView_Theme_License"
            android:layout_marginTop="@dimen/margin_small"
            android:textColor="@color/color_nebula_dark"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/button_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_about_quit"
            android:background="@drawable/button_purple_small"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:layout_marginBottom="@dimen/margin_small" />

    </LinearLayout>
</ScrollView>
