<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/repeating_texture"
    tools:context=".fragment.ChallengeThreeFragment"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextView_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_challenge_one_title"
            android:textSize="24sp"
            android:layout_marginTop="@dimen/margin_small"
            android:textColor="@color/color_nebula_selected"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginBottom="15dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@color/color_nebula_selected"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="@dimen/margin_small" />

        <TextView
            android:id="@+id/TextView_Challenge_Intro"
            android:text="@string/string_challenge_one_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_nebula_dark"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_medium"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/challenge_one_text_guess"
            android:text= "@string/string_challenge_guess"
            android:textColor="@color/color_nebula_dark"
            android:width="200dp"
            android:editable="true"
            android:enabled="true"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_medium"
            android:singleLine="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_small">


            <Button
                android:id="@+id/challenge_one_button_check"
                android:text="@string/string_challenge_check"
                android:background="@drawable/button_purple_small"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_marginRight="@dimen/margin_medium"
                android:focusable="true"
                android:enabled="true" />

            <Button
                android:id="@+id/button_write_file"
                android:text="@string/string_challenge_write_file"
                android:background="@drawable/button_purple_small"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:enabled="true"
                android:layout_gravity="center_horizontal"
                android:focusable="true" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
